<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".fragments.VehiclesFragment">

    <LinearLayout
        android:id="@+id/search_and_sort_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/search_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/search_hint"
            android:textColor="@color/white"
            android:textColorHint="@color/dark_gray"
            android:textSize="17sp"
            android:background="@drawable/edit_text_background_corner_radius_10"/>

        <TextView
            android:id="@+id/sort_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/sort"
            android:textColor="@color/light_orange"
            android:textSize="15sp"
            android:textAlignment="textEnd"
            android:layout_marginStart="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/vehicles_type_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_and_sort_layout">

        <TextView
            android:id="@+id/car_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:text="@string/car"
            android:textColor="@color/darker_gray"
            android:textSize="17sp"
            android:textAlignment="textStart"
            />

        <TextView
            android:id="@+id/motor_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:text="@string/motor"
            android:textColor="@color/darker_gray"
            android:textSize="17sp"
            android:textAlignment="center"
            />

        <TextView
            android:id="@+id/truck_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:text="@string/truck"
            android:textColor="@color/darker_gray"
            android:textSize="17sp"
            android:textAlignment="textEnd"
            />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/vehicles_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/vehicles_type_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>